--- a/package.json
+++ b/package.json
@@ -9,27 +9,48 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "dev:ssr": "ng run app:serve-ssr",
+    "serve:ssr": "node dist/app/server/main.js",
+    "build:ssr": "ng build && ng run app:server",
+    "prerender": "ng run app:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.2",
+    "@angular/animations": "^17.2.4",
     "@angular/common": "^17.0.2",
     "@angular/compiler": "^17.0.2",
     "@angular/core": "^17.0.2",
     "@angular/forms": "^17.0.2",
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
+    "@angular/platform-server": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@angular/ssr": "^17.2.3",
+    "@awesome-cordova-plugins/location-accuracy": "^6.6.0",
+    "@capacitor-community/fcm": "^5.0.3",
+    "@capacitor/android": "5.7.2",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.2",
+    "@capacitor/geolocation": "^5.0.7",
     "@capacitor/haptics": "5.0.7",
+    "@capacitor/ios": "5.7.2",
     "@capacitor/keyboard": "5.0.8",
+    "@capacitor/push-notifications": "^5.1.1",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
+    "@ionic/angular-server": "^7.7.4",
+    "@nguniversal/express-engine": "^7.0.2",
+    "capacitor-native-settings": "^5.0.1",
+    "cordova-plugin-request-location-accuracy": "^2.3.0",
+    "express": "^4.18.2",
+    "firebase": "^10.8.1",
+    "firebase-admin": "^11.1.1",
+    "googleapis": "^133.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "webpack": "^5.90.3",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
@@ -44,9 +65,12 @@
     "@angular/language-service": "^17.0.2",
     "@capacitor/cli": "5.7.2",
     "@ionic/angular-toolkit": "^9.0.0",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "browser-sync": "^3.0.0",
     "eslint": "^7.26.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -58,7 +82,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "description": "An Ionic project"
 }
