--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+/php/stable-device-335608-firebase-adminsdk-9istn-9e1551861f.json
+/android/app/google-services.json
