--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@capacitor/haptics": "5.0.7",
     "@capacitor/ios": "5.7.2",
     "@capacitor/keyboard": "5.0.8",
+    "@capacitor/local-notifications": "^5.0.7",
     "@capacitor/push-notifications": "^5.1.1",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
