--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@ionic/angular": "^7.0.0",
     "@ionic/angular-server": "^7.7.4",
     "@nguniversal/express-engine": "^7.0.2",
+    "@types/leaflet": "^1.9.12",
     "capacitor-native-settings": "^5.0.1",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "express": "^4.18.2",
