--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.2",
     "@capacitor/geolocation": "^5.0.7",
+    "@capacitor/google-maps": "^5.4.1",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/ios": "5.7.2",
     "@capacitor/keyboard": "5.0.8",
@@ -42,7 +43,7 @@
     "@ionic/angular": "^7.0.0",
     "@ionic/angular-server": "^7.7.4",
     "@nguniversal/express-engine": "^7.0.2",
-    "@types/leaflet": "^1.9.12",
+    "@proteansoftware/capacitor-start-navigation": "^5.0.0",
     "capacitor-native-settings": "^5.0.1",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "express": "^4.18.2",
@@ -69,6 +70,7 @@
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
