Rimossa chiave API google e cambiato colore del testo per i bottoni dedicati al routing

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
                 android:resource="@xml/file_paths"></meta-data>
         </provider>
 
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCudTOorJR4MUdtOqbHCxWt4C4JVmkCiPg"/>
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value=""/>
     </application>
 
     <!-- Permissions -->
